[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/connect_to_server_window/connect_to_server_window.gd" type="Script" id=1]

[node name="ConnectToServerWindow" type="WindowDialog"]
margin_right = 400.0
margin_bottom = 179.0
window_title = "Connect To Server"
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.0
margin_top = -67.5
margin_right = 157.0
margin_bottom = 0.5
custom_constants/vseparation = 20
custom_constants/hseparation = 40
columns = 2

[node name="AddressLabel" type="Label" parent="GridContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
text = "Server Address:"

[node name="AddressLineEdit" type="LineEdit" parent="GridContainer"]
margin_left = 140.0
margin_right = 310.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 40
placeholder_text = "127.0.0.1"
caret_blink = true

[node name="PortLabel" type="Label" parent="GridContainer"]
margin_top = 49.0
margin_right = 100.0
margin_bottom = 63.0
text = "Server Port:"

[node name="PortLineEdit" type="LineEdit" parent="GridContainer"]
margin_left = 140.0
margin_top = 44.0
margin_right = 310.0
margin_bottom = 68.0
custom_constants/minimum_spaces = 20
placeholder_text = "18000"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -60.0
margin_right = -40.0
margin_bottom = -40.0
custom_constants/separation = 60
alignment = 1

[node name="CancelButton" type="Button" parent="HBoxContainer"]
margin_left = 89.0
margin_right = 136.0
margin_bottom = 20.0
text = "Canel"

[node name="JoinButton" type="Button" parent="HBoxContainer"]
margin_left = 196.0
margin_right = 231.0
margin_bottom = 20.0
text = "Join"

[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
